kubernetes/apps/dev/registry/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
  name: docker-registry
  namespace: dev
spec:
  rules:
  - host: "registry.${SECRET_DOMAIN}"
    http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: docker-registry
            port:
              number: 5000
        path: /
